# SubBake

./: .gitignore  CHANGELOG.md  README-pypi.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  testpypi.yml
examples/: sample.srt  sample.txt  sample.vtt  subbake.toml
subbake/: __init__.py  __main__.py  app.py  checker.py  config.py  entities.py  languages.py  memory.py  pipeline.py  prompts.py  storage.py
subbake/models/: __init__.py  base_model.py
subbake/parsers/: __init__.py  srt_parser.py  txt_parser.py  vtt_parser.py
subbake/ui/: __init__.py  dashboard.py
tests/: test_cli.py  test_config.py  test_dashboard.py  test_models.py  test_parsers.py  test_pipeline.py  test_prompts.py  test_validation.py
