[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subbake"
version = "0.1.0"
description = "LLM-powered subtitle translation CLI with batch memory and review passes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
sbake = "subbake.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["subbake*"]
